some security fixes

--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -51,6 +51,7 @@ jobs:
           rm -rf test/ apps/*/Test/
           rm -rf apps/*/js/
           rm -rf apps/*/scss/
+          pwd
           zip -r nightly-${{ github.sha }}.zip server
 
       - name: Create Release
